# digital-locker

./: .env.example  LICENSE  OAUTH_CREDENTIALS_SETUP.md  README.md  design.md  main.py  manage.py  pyproject.toml  requirements.md  requirements.txt  tasks.md
clothing/: admin.py  apps.py  models.py  test_auth.py  tests.py  urls.py
clothing/migrations/: 0001_initial.py
docs/: OAUTH_SETUP.md
scripts/: check_oauth_config.sh  get_codespace_url.sh  test_auth_guide.sh  verify_auth.sh
templates/: base.html
templates/account/: login.html  logout.html  signup.html
theme/static_src/src/: styles.css
work_clothes_tracker/: asgi.py  settings.py  urls.py  wsgi.py
